RESOLVED FIXED119270
Plug-in process crashes if plug-in is destroyed as a result of sending NPObjectMessageReceiver::Deallocate
https://bugs.webkit.org/show_bug.cgi?id=119270
Summary Plug-in process crashes if plug-in is destroyed as a result of sending NPObje...
Anders Carlsson
Reported 2013-07-30 12:31:33 PDT
Plug-in process crashes if plug-in is destroyed as a result of sending NPObjectMessageReceiver::Deallocate
Attachments
Patch (4.86 KB, patch)
2013-07-30 12:37 PDT, Anders Carlsson
darin: review+
Anders Carlsson
Comment 1 2013-07-30 12:37:53 PDT
Anders Carlsson
Comment 2 2013-07-30 12:44:02 PDT
Note You need to log in before you can comment on or make changes to this bug.